2007-08-24 [paul]	2.10.0cvs164

	* AUTHORS
	* Makefile.am
	* README
	* src/gtk/authors.h
	* tools/Makefile.am
	* tools/README
	* tools/mew2claws-mail.pl
		add new script that imports a Mew address book
		submitted by Jerome Lelong

2007-08-24 [paul]	2.10.0cvs163

	* manual/plugins.xml
		remove the obsolete plugins, add the
		missing plugins, including the forthcoming
		SpamReport plugin

2007-08-24 [paul]	2.10.0cvs162

	* manual/advanced.xml
		add info about the hidden emphasis_color option
	* manual/keyboard.xml
		correct the info about hotkeys
		wrap the long lines

2007-08-24 [paul]	2.10.0cvs161

	* src/folderview.c
		add mnemonic to 'Run procesing rules'

2007-08-24 [paul]	2.10.0cvs160

	* src/account.c
	* src/folder.c
	* src/folder.h
		use suitable defaults for outbox,
		queue, drafts and trash folders

2007-08-24 [wwp]	2.10.0cvs159

	* src/folderview.c
		Update menu item sensitivity if necessary (or we get a
		gtk critical message).

2007-08-23 [wwp]	2.10.0cvs158

	* src/action.c
	* src/prefs_actions.c
		Allow literal % chars in action commands (use %%).
		Add a missing p++ to the action parser in action_get_type(),
		which was missing it, even if it was neutral.
		Fix a pango markup warning at runtime.

2007-08-23 [wwp]	2.10.0cvs157

	* src/addressbook.c
		Contacts are now locale-aware sorted in the address book
		(LC_COLLATE matters here).
		Fix missing table initializers.

2007-08-23 [colin]	2.10.0cvs156

	* src/imap.c
		Check scan_required on dest folder when copying

2007-08-23 [colin]	2.10.0cvs155

	* src/imap.c
		Fix scanning when folder was empty

2007-08-22 [colin]	2.10.0cvs154

	* src/msgcache.c
		Don't g_warning when g_try_malloc fails(), or it makes
		things worse as g_log() allocates. Fixes bug 1290,
		'Claws Mail crashes if too little memory when 
		rebuilding folder tree'

2007-08-22 [colin]	2.10.0cvs153

	* src/inc.c
		Fix format string vulnerability, thanks to
		Ulf Harnhammar, Secunia Research

2007-08-22 [colin]	2.10.0cvs152
