@@ -1,72 +1,53 @@
-EXTRA_TOOLS = \
-	OOo2claws-mail.pl \
-	acroread2claws-mail.pl \
-	claws-mail-compose-insert-files.pl \
-	calypso_convert.pl \
-	convert_mbox.pl \
-	eud2gc.py \
-	filter_conv.pl \
-	filter_conv_new.pl \
-	fix_date.sh \
-	freshmeat_search.pl \
-	gif2xface.pl \
-	google_msgid.pl \
-	google_search.pl \
-	kmail2claws-mail.pl \
-	kmail2claws-mail_v2.pl \
-	kmail-mailbox2claws-mail.pl \
-	mairix.sh \
-	mew2claws-mail.pl \
-	multiwebsearch.pl \
-	nautilus2claws-mail.sh \
-	outlook2claws-mail.pl \
-	popfile-link.sh \
-	sylprint.pl \
-	sylprint.rc \
-	tb2claws-mail \
-	tbird2claws.py \
-	textviewer.pl \
-	textviewer.sh \
-	thunderbird-filters-convertor.pl \
-	update-po \
-	uudec \
-	uuooffice \
-	vcard2xml.py \
-	kdeservicemenu/install.sh \
-	kdeservicemenu/claws-mail-kdeservicemenu.pl
+ACLOCAL_AMFLAGS = -I m4
+AUTOMAKE_OPTIONS = dist-bzip2
+
+if PLATFORM_WIN32
+tools = 
+else
+tools = tools
+endif
+
+SUBDIRS = m4 po src $(tools) config doc manual
 
 EXTRA_DIST = \
-	README \
-	README.sylprint \
-	multiwebsearch.conf \
-	kdeservicemenu/README \
-	kdeservicemenu/template_claws-mail-attach-files.desktop \
-	$(EXTRA_TOOLS)
+	ChangeLog \
+	ChangeLog.gtk1 \
+	ChangeLog.pre2.0.0 \
+	RELEASE_NOTES \
+	claws-mail-128x128.png \
+	claws-mail-64x64.png \
+	claws-mail.pc.in \
+	claws-mail.desktop \
+	claws-mail.png \
+	autogen.sh
 
-MAKE_EXE = chmod u+x $(EXTRA_TOOLS)
+# hicolor icon theme, base class of all icon themes
+pixmapdir=$(datadir)/icons/hicolor/48x48/apps
+pixmap_DATA=claws-mail.png
+gnomapdir = $(datadir)/applications
+gnomap_DATA=claws-mail.desktop
 
-all-local:
-	if [ ! -d kdeservicemenu -a ! -e kdeservicemenu ]; then \
-	mkdir kdeservicemenu; \
-	fi; \
-	for file in $(EXTRA_TOOLS); do \
-	if [ ! -e ${top_builddir}/tools/$$file ]; then \
-	todir=${top_builddir}/tools; \
-	dir=$$(dirname $$file); \
-	if [ ! $$dir = . ]; then \
-	todir=$$todir/$$dir; \
-	fi; \
-	cp ${top_srcdir}/tools/$$file $$todir; \
-	fi; \
-	done;
-	$(MAKE_EXE)
+if CLAWS_GNOME2
+gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
 
-distclean-local:
-	if [ ! ${top_builddir} = ${top_srcdir} ]; then \
-	for file in $(EXTRA_TOOLS); do \
-	rm -f $$file; \
-	done; \
-	if [ -d kdeservicemenu ]; then \
-	rmdir --ignore-fail-on-non-empty kdeservicemenu; \
-	fi; \
-	fi
+install-data-hook:
+	@-if test -z "$(DESTDIR)"; then					\
+                echo "Updating Gtk icon cache.";			\
+                $(gtk_update_icon_cache);				\
+        else								\
+                echo "*** Icon cache not updated. Remember to run:";	\
+		echo "***";						\
+                echo "***   $(gtk_update_icon_cache)";			\
+		echo "***";						\
+        fi
+endif
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = claws-mail.pc
+
+clawsincludedir = $(pkgincludedir)
+clawsinclude_HEADERS = \
+	config.h
+
+relnotesdir = $(docdir)
+relnotes_DATA = RELEASE_NOTES
